--- a/iRemember/src/de/javadevblog/iremember/view/mailview.fxml
+++ b/iRemember/src/de/javadevblog/iremember/view/mailview.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
 
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <Label alignment="CENTER" text="Email">
+         <font>
+            <Font size="48.0" />
+         </font>
+      </Label>
+   </center>
+</BorderPane>
