--- a/iRemember/src/de/javadevblog/iremember/view/adressview.fxml
+++ b/iRemember/src/de/javadevblog/iremember/view/adressview.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
-
 
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
@@ -13,4 +16,15 @@
          </font>
       </Label>
    </center>
+   <left>
+      <TableView fx:id="tableView" layoutX="20.0" layoutY="25.0" prefHeight="200.0" prefWidth="350.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="25.0">
+        <columns>
+          <TableColumn fx:id="firstNameColumn" prefWidth="75.0" text="Vorname" />
+          <TableColumn fx:id="lastNameColumn" prefWidth="75.0" text="Nachname" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+   </left>
 </BorderPane>
